--- a/src/app/client/auth/signup/signup.component.html
+++ b/src/app/client/auth/signup/signup.component.html
@@ -5,22 +5,22 @@
               <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900 uppercase">đăng ký</h2>
               <p class="mt-2 text-center text-sm text-gray-600"></p>
           </div>
-          <form id="formSignup">
+          <form  [formGroup]="signup" (ngSubmit)="onSubmit()">
               <div class="mt-4">
                   <div>
                       <label class="block" for="Name">Họ và tên <span class="text-red-500">*</span></label>
-                      <input type="text" name="name-user" id="name-user" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                      <input type="text" name="name-user" formControlName="name" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                   </div>
                   <div class="mt-4">
                       <label class="block" for="email">Địa chỉ email <span class="text-red-500">*</span></label>
-                      <input type="text" name="email" id="email" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                      <input type="text" name="email" formControlName="email" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                   </div>
                   <div class="mt-4">
                       <label class="block">Mật khẩu <span class="text-red-500">*</span></label>
-                      <input type="password" name="password" id="password" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                      <input type="password" name="password" formControlName="password" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                   </div>
                   <div class="flex mt-[20px]">
-                      <button id="btn-save-users" class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Đăng ký</button>
+                      <button class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Đăng ký</button>
                   </div>
                   <div class="mt-6 text-grey-dark">Bạn đã có tài khoản? <a class="text-blue-600 hover:underline" href="/signin">Đăng nhập</a></div>
               </div>
