--- a/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
+++ b/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
@@ -53,8 +53,9 @@
                               </tr>
                           </thead>
                           <tbody class="bg-white divide-y divide-gray-200">
-                              <tr *ngFor="let product of products">
+                              <tr *ngFor="let product of products; index as i">
                                   <td class="px-9 py-4 whitespace text-sm text-gray-500">
+                                    {{i +1}}
                                   </td>
                                   <td class="px-6 py-4 whitespace">
                                       <div class="flex items-center">
