--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -4,95 +4,17 @@
         <div class="my-[20px]">
             <h2 class="font-semibold text-2xl uppercase my-[30px] text-center">Tất cả Sản phẩm</h2>
             <div class="grid grid-cols-5 gap-8">
-                <div class="border p-3">
-                    <a routerLink="/sanpham/:id">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
+                <div class="border p-3" *ngFor="let pro of products">
+                    <a routerLink="/sanpham/{{pro._id}}">
+                        <img src="{{pro.img}}" class="w-[250px] h-[300px]">
                     </a>
                     <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
+                        <a routerLink="/" class="font-semibold text-[15px] ">{{pro.name}}</a>
                     </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
-                </div>
-                <div class="border p-3">
-                    <a routerLink="/">
-                        <img src="https://picsum.photos/200/300" class="w-[250px] h-[250px]">
-                    </a>
-                    <h3 class="my-3">
-                        <a routerLink="/" class="font-semibold text-[18px] ">adhihi</a>
-                    </h3>
-                    <p class="text-[red] font-semibold text-[17px]">ahihii</p>
+                    <div class="flex">
+                      <span class="text-[red] font-semibold text-[14px]">{{pro.sale_price | currency: "VND"}}</span>
+                      <span class="text-[gray] font-semibold text-[12px] ml-[20px] line-through">{{pro.price | currency: "VND"}}</span>
+                    </div>
                 </div>
             </div>
         </div>
