làm phần up ảnh

--- a/src/app/client/layouts/header-client/header-client.component.html
+++ b/src/app/client/layouts/header-client/header-client.component.html
@@ -78,7 +78,7 @@
             <nav class="text-white">
                 <ul class="flex h-[50px] py-2">
                     <li>
-                        <a routerLink="/" class="menu-item">Trang chủ</a>
+                        <a routerLink="" class="menu-item">Trang chủ</a>
                     </li>
                     <li>
                         <a routerLink="/sanpham" class="menu-item">
