update chức năng check quyền vs hiển thị sp theo cate

--- a/src/app/admin/product-admin/admin-product-form-edit/admin-product-form-edit.component.html
+++ b/src/app/admin/product-admin/admin-product-form-edit/admin-product-form-edit.component.html
@@ -56,6 +56,9 @@
                           <div>
                               <label class="block text-sm font-medium text-gray-700">
                               Hình ảnh <span class="text-[red]">*</span></label>
+                              <div *ngIf="img">
+                                <img [src]="img" class="w-[240px] h-[140px]"/>
+                              </div>
                               <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
                                   <div class="space-y-1 text-center">
                                       <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48"
@@ -67,7 +70,7 @@
                                       <div class="flex text-sm text-gray-600">
                                       <label class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                                           <span>Upload a file</span>
-                                          <input formControlName="file-upload" name="file-upload" type="file" class="sr-only">
+                                          <input type="file" formControlName="img"  (change)="upload($event)"  class="sr-only">
                                       </label>
                                       <p class="pl-1">or drag and drop</p>
                                       </div>
