--- a/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
+++ b/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
@@ -59,9 +59,6 @@
                               <app-show-validate [field]="productForm.get('desc')"></app-show-validate>
                           </div>
                           <div>
-                            <input type="file" formControlName="img"  (change)="upload($event)">
-                          </div>
-                          <!-- <div>
                               <label class="block text-sm font-medium text-gray-700">
                                 Hình ảnh
                                 <span class="text-[red]">*</span>
@@ -77,7 +74,7 @@
                                       <div class="flex text-sm text-gray-600">
                                       <label class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                                           <span>Upload a file</span>
-                                          <input type="file" formControlName="img"  (change)="uploadFile($event)"  class="sr-only">
+                                          <input type="file" formControlName="img"  (change)="upload($event)"  class="sr-only">
                                       </label>
                                       <p class="pl-1">or drag and drop</p>
                                       </div>
@@ -86,7 +83,7 @@
                                       </p>
                                   </div>
                               </div>
-                          </div> -->
+                          </div>
                       </div>
                       <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
                           <a routerLink="/admin/products" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Hủy</a>
