--- a/src/app/client/product/product-client-list/product-client-list.component.html
+++ b/src/app/client/product/product-client-list/product-client-list.component.html
@@ -11,7 +11,9 @@
             <div class="mx-2 text-[#5d5f6c]">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
-            <div class="text-yellow-500 font-semibold"></div>
+            <div class="text-yellow-500 font-semibold">
+              Tất cả sản phẩm
+            </div>
         </div>
         <div class="my-[20px]">
             <div class="grid grid-cols-5 gap-8">
