update giỏ hàng

--- a/src/app/client/cart/cart.component.html
+++ b/src/app/client/cart/cart.component.html
@@ -24,6 +24,9 @@
                             <thead class="bg-gray-50">
                                 <tr>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Role
+                                    </th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Hình ảnh
                                     </th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -42,6 +45,11 @@
                             </thead>
                             <tbody class="bg-white divide-y divide-gray-200">
                                 <tr *ngFor="let item of cartItems; index as i">
+                                  <td class="px-6 py-4">
+                                    <button (click)="onDelete(item?._id)">
+                                      <i class="fa-solid fa-trash-can text-[20px] text-[red]"></i>
+                                    </button>
+                                  </td>
                                     <td class="px-6 py-4">
                                         <div class="flex items-center">
                                             <div class="flex-shrink-0 h-[150px] w-[150px]">
@@ -60,28 +68,34 @@
                                     </td>
                                     <td class="px-6 py-4 flex">
                                         <span class="px-6 py-12 text-right text-sm font-medium flex">
-                                            <button class="btn bg-red-500 text-white inline-block py-3 px-[10px] rounded btn-decrease">-</button>
+                                            <button (click)="onTangSl(item?._id)" class="btn bg-red-500 text-white inline-block py-3 px-[10px] rounded btn-decrease">+</button>
                                             <div class="px-4 py-4 text-sm text-gray-900 border">{{item.value}}</div>
-                                            <button class="btn bg-red-500 text-white inline-block py-3 px-[10px] rounded btn-increase">+</button>
+                                            <button (click)="onGiamSl(item?._id)" class="btn bg-red-500 text-white inline-block py-3 px-[10px] rounded btn-increase">-</button>
                                         </span>
                                     </td>
                                     <td class="px-6 py-4">
                                         <div class="text-sm text-gray-900">
-                                          {{item.price}}
+                                          {{item.sale_price | currency: 'VND'}}
                                         </div>
                                     </td>
                                     <td class="px-6 py-4">
-                                        <div class="text-sm text-gray-900"></div>
+                                        <div class="text-sm text-gray-900">
+                                          <!-- {{price | currency: 'VND' }} -->
+                                          {{item.sale_price * item.value | currency: 'VND'}}
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr class="grid-cols-6">
-                                    <td colspan="4" class="px-6 py-4">
+                                    <td colspan="5" class="px-6 py-4">
                                         <div class="text-center uppercase">
                                             thành tiền:
                                         </div>
                                     </td>
                                     <td class="px-6 py-4">
-                                        <div class="text-center" id="sumPrice"></div>
+                                        <div class="text-center" id="sumPrice">
+                                          <!-- {{cartItemValues | currency:"VND"}} -->
+                                         {{cartItemValues | currency:"VND"}}
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
